[project]
name            = "advent-of-code"
version         = "1.0.0"
requires-python = ">=3.14"
environments    = [ "implementation_name == 'cpython'" ]
dependencies    = [
    "numpy~=2.3.0",
    "scipy~=1.16.0",
    "sympy~=1.14.0",
    "basedpyright~=1.35.0",
    "shapely~=2.1.0",
]

[tool.basedpyright]
include                 = ["aoc", "2025"]
pythonVersion           = "3.14"
typeCheckingMode        = "strict"
useLibraryCodeForTypes  = true
reportUnknownMemberType = false
